# VedhaVriddhi

./: .env.example  .env.template  Makefile  README.md  docker-compose.yml
.github/workflows/: vedhavriddhi-ci.yml
alembic/versions/: 001_initial_migration.py
backend/agi-coordination-service/: config.py  main.py
backend/agi-service/: Dockerfile  config.py  main.py  models.py  requirements.txt
backend/ai-trading-service/: config.py  main.py  models.py  requirements.txt
backend/analytics-service/: config.py  main.py  models.py  requirements.txt
backend/api-gateway/: Dockerfile  auth.py  config.py  main.py  models.py  requirements.txt  websocket_manager.py
backend/api-gateway-service/: main.py
backend/blockchain-service/: config.py  main.py  models.py  requirements.txt
backend/climate-intelligence-service/: config.py  (+3 more)
backend/trading-engine/: Cargo.toml  Dockerfile
backend/trading-engine/src/: main.rs  types.rs
backend/trading-engine/src/engine/: matching.rs  mod.rs  order_book.rs  position_manager.rs  risk_manager.rs
deployment/: docker-compose.phase4.yml
docs/: api_specification.yaml
k8s/: agi-service-deployment.yaml  consciousness-service-deployment.yaml  defi-service-deployment.yaml  monitoring-stack.yaml  quantum-service-deployment.yaml  service-mesh-security.yaml
middleware/: security_middleware.py
monitoring/: alerting_rules.yaml  prometheus_metrics.py
performance/: load_testing.py
scripts/: disaster_recovery.py
security/: authentication.py
tests/: test_agi_service.py  test_consciousness_service.py  test_quantum_service.py
(+173 files in other folders)
